# vectorizer-ai

./: .env.example  .gitignore  CHANGELOG.md  FLUJO_REFINAMIENTO.md  LICENSE  README.md  TODO.md  debug_text_analysis.py  prototype_visual_refinement.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_easy_suite.py  test_hybrid.py  test_optimizer.py  test_simple.py  test_turbo_final.py  test_vectorizer.py  vectorizer.py
.github/workflows/: lint.yml  tests.yml
docs/: CONTRIBUTING.md  CURRENT_FOCUS.md  IMPROVEMENT_PLAN.md  LOCAL_LLMS.md  PHASE_1_COMPLETED.md  PHASE_2_COMPLETED.md  PHASE_3_COMPLETED.md  PHASE_4_COMPLETED.md  PHASE_5_PROGRESS.md  PLANNING_SUMMARY.md  PROGRESS.md  QUALITY_IMPROVEMENT.md  TASK_TEMPLATE.md  api.md  architecture.md  development.md
docs/tasks/: TASK_1.1_COMPLETED.md  TASK_1.2_COMPLETED.md  TASK_1.3_COMPLETED.md  TASK_1.4_COMPLETED.md  TASK_1.5_COMPLETED.md  TASK_5.1_COMPLETED.md
examples/: __init__.py  basic_usage.py  batch_usage.py
experiments/: Prompts.md
scripts/: README.md  generate_pngs_from_svgs.py  generate_test_suite.py  progress.py  run_test_suite.py  svg_to_png.py  test_quality.py
src/vectorizer/: __init__.py  __main__.py  cache.py  cli.py  comparator.py  core.py  cost_estimator.py  local_llm.py  metrics.py  models.py  prompts.py  svg_generator.py  vision.py
test_suite/: DESCUBRIMIENTOS_SESION.md  MEDIUM_TESTS.md  SESION_RESUMEN.md  TEST_RESULTS.md  easy_tests_results.md  observations.md
tests/: __init__.py  test_batch.py  test_cli.py  test_comparator.py  test_error_handling.py  test_integration.py  test_optimizations.py  test_svg_generator.py  test_validation.py  test_vision.py
